# btc-idx-service

./: .env  .gitignore  Cargo.toml  README.md  REQUIREMENT.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/migrations/: 20241120123711_bitcoin.sql
core/src/: lib.rs  rpc_client.rs
core/src/bitcoin/: aggregator.rs  client.rs  harvester.rs  mod.rs  types.rs
core/src/bitcoin/harvester/: client.rs  mod.rs  processor.rs
core/src/sqlx_postgres/: bitcoin.rs  mod.rs
deployment/: Dockerfile  bis_dev.toml  config.toml  config_dev.toml  config_docker.toml  config_staging.toml  docker-compose.yaml  docker_bitcoin.conf
deployment/grafana/: loki-config.yaml  promtail-config.yaml
deployment/grafana/provisioning/datasources/: loki.yaml
deployment/k8s-configs/: bis-cm0-configmap.yaml  bis-deployment.yaml  bis-pod.yaml  bis-service.yaml  btc-regtest-cm0-configmap.yaml  btc-regtest-deployment.yaml  btc-regtest-service.yaml  postgres-deployment.yaml  postgres-service.yaml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
