[workspace]
members = ["core", "bin/bis", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ivanshyu/btc-idx-service.git"
description = "bitcoin index service"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13.0"
bigdecimal = { version = "0.2", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
env_logger = "0.9.0"
futures = "0.3"
hex = "0.4.3"
log = "0.4"
once_cell = "1"
rand = "0.8.5"
rustc-hex = "2.1.0"
regex = { version = "1.9.6" }
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
  "decimal",
  "bit-vec",
  "any",
  "migrate",
] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tracing = { version = "0.1.28", default-features = false }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tokio = { version = "1", features = [
  "signal",
  "rt-multi-thread",
  "net",
  "time",
  "macros",
  "sync",
  "io-std",
] }

atb = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
atb-cli = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
atb-tokio-ext = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
