[workspace]
members = ["core", "bin/bis", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ivanshyu/btc-idx-service.git"
description = "bitcoin index service"

[workspace.dependencies]
anyhow = "1"
bigdecimal = { version = "0.4.6", features = ["serde"] }
env_logger = "0.11.5"
futures = "0.3"
log = "0.4"
once_cell = "1"
rand = "0.8.5"
rustc-hex = "2.1.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "bit-vec",
  "any",
  "migrate",
  "bigdecimal",
] }
thiserror = "=2.0.3"
tokio = { version = "1", features = [
  "signal",
  "rt-multi-thread",
  "net",
  "time",
  "macros",
  "sync",
  "io-std",
] }

# bitcoin
bitcoin = { version = "0.32.4" }
bitcoincore-rpc = "0.19.0"

# atb
atb = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
atb-cli = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
atb-tokio-ext = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
atb-types = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }
