[package]
name = "bis-core"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
futures = { workspace = true }
futures-core = { version = "0.3" }
log = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bit-vec",
    "any",
    "migrate",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "signal",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
num-traits = "0.2.12"

# bitcoin
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }

# atb
atb = { workspace = true }
atb-cli = { workspace = true }
atb-tokio-ext = { workspace = true }
atb-types = { workspace = true }
