[package]
name = "integration-tests"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = false

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
bigdecimal = { workspace = true }
anyhow = { workspace = true }
